--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
 												<div class="comptitle_05 ">
 													<em>
                                                     <span class="extendLink">
-                                                        <a href="index.html#home" target="_self">更多详细+</a>
+                                                        <a href="peiweihua.github.io/html" target="_self">更多详细+</a>
                                                     </span>
                                                 
                                                 </em>
