--- a/Project.html
+++ b/Project.html
@@ -115,7 +115,7 @@
 			</li>
 			<li>
 				<div>
-					<h2>FullPage</h2>
+					<h2>FullPage个人主页</h2>
 					<span><a href="https://peiweihua.github.io/html" target="_blank"></a></span>
 				</div>
 				<img src="img/UCglass.jpg" />
